Storefront: Fix some cases of the inconsistent spacing.

--- a/apps/storefront/src/components/Footer/footer.module.scss
+++ b/apps/storefront/src/components/Footer/footer.module.scss
@@ -7,7 +7,6 @@
     width: 100%;
     background: var(--accent-primary-dark);
     color: var(--accent-primary-text);
-    margin-top: var(--block-padding-large);
 
     .content {
         width: var(--page-width);
